integrated loader into manager, added testing for new classes