@@ -31,12 +31,9 @@ public class LoaderTest {
                             "Should not throw errors for valid CSV file path"),
                 () -> assertDoesNotThrow(() -> loader.loadTransactions("data/seahawks_transactions.csv"),
                             "Should not throw errors for valid CSV file path"),
-                () -> assertNotNull(loader.playerData, "the player data should not be null"),
-                () -> assertNotNull(loader.drillData, "the drill data should not be null"),
-                () -> assertNotNull(loader.transactionData, "the transaction data should not be null"),
-                () -> assertFalse(loader.playerData.isEmpty(), "the player data should not be empty"),
-                () -> assertFalse(loader.drillData.isEmpty(), "the drill data should not be empty"),
-                () -> assertFalse(loader.transactionData.isEmpty(), "the transaction data should not be empty")
+                () -> assertNotNull(loader.loadPlayers("data/seahawks_players.csv"), "the player data should not be null"),
+                () -> assertNotNull(loader.loadDrills("data/seahawks_drills.csv"), "the drill data should not be null"),
+                () -> assertNotNull(loader.loadTransactions("data/seahawks_transactions.csv"), "the transaction data should not be null")
 
         );
 
@@ -53,8 +50,8 @@ public class LoaderTest {
                 () -> assertThrows(IOException.class, ()-> loader.loadDrills("bad path")),
                 () -> assertThrows(IllegalArgumentException.class, ()-> loader.loadPlayers("test/badFormatPlayers.csv")),
                 () -> assertThrows(IllegalArgumentException.class, ()-> loader.loadTransactions("test/empty.csv")),
-                () -> assertNotNull(loader.playerData, "Application should retain valid data even after invalid data loaded"),
-                () -> assertEquals(Player.class.getName(), loader.playerData.getFirst().getClass().getName(),
+                () -> assertNotNull(loader.loadPlayers("data/seahawks_players.csv"), "Application should retain valid data even after invalid data loaded"),
+                () -> assertEquals(Player.class.getName(), loader.loadPlayers("data/seahawks_players.csv").get(0).getClass().getName(),
                             "Application should retain valid data even after invalid data loaded")
 
         );
